# discord-rss-bot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.forgejo/workflows/: build.yml
.gitea/workflows/: build.yml
.github/workflows/: build.yml  codeql-analysis.yml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: db_router.py  settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
discord_rss_bot/: apscheduler_listener.py  asgi.py  blacklist.py  custom_filters.py  custom_message.py  discord_rss_bot.py  feeds.py  git_backup.py  healthcheck.py  hoyolab_api.py  html_format.py  is_url_valid.py  logger.py  main.py  markdown.py  missing_tags.py  reader.py  search.py  settings.py  urls.py  webhook.py  webhooks.py  whitelist.py  wsgi.py
discord_rss_bot/extensions/: README.md  __init__.py  base.py  discovery.py  hoyolab.py  jwplayer_thumbnail.py  runner.py  steam.py  storage.py  wordpress.py  youtube.py
discord_rss_bot/filter/: blacklist.py  evaluator.py  utils.py  whitelist.py
discord_rss_bot/static/: styles.css
discord_rss_bot/templates/: _filter_preview.html  _webhook_mass_update_preview.html  add.html  add_webhook.html  base.html  blacklist.html  custom.html  embed.html  extensions.html  feed.html  import_opml_preview.html  index.html  mass.html  nav.html  search.html  sent_webhooks.html  settings.html  webhook_entries.html  webhooks.html  whitelist.html
feeds/: apps.py  custom_message.py  forms.py  markdown.py  urls.py  views.py  webhooks.py
feeds/migrations/: 0001_initial.py  0002_alter_blacklist_options_and_more.py
feeds/models/: __init__.py  blacklist.py  feed.py  lemon.py  message.py  webhooks.py  whitelist.py
feeds/templatetags/: parse_json_filter.py  quote_filter.py
static/: htmx.min.js  style.css
templates/: add.html  base.html  feed.html  feeds.html  index.html  nav.html  navbar.html  webhooks.html  whitelist.html
templates/accounts/: login.html  profile.html  signup.html
templates/reader/: feed_list.html  webhook_list.html
tests/: conftest.py  test_blacklist.py  test_conftest_hooks.py  test_custom_filter.py  test_custom_message.py  test_discord_rss_bot.py  test_extensions.py  test_feeds.py  test_git_backup.py  test_healthcheck.py  test_hoyolab_api.py  test_main.py  test_markdown.py  test_search.py  test_settings.py  test_update_interval.py  test_utils.py  test_whitelist.py
